Fix [alignement icones] - Retour arrière sur l'alignement des icones pour cause de regressions

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -479,13 +479,7 @@
 .ds44-docListIco {
   position: absolute;
   left: 0;
-  top: 1px;
-}
-
-.ds44-docListElem {
-  .ds44-docListIco { // réalignement du picto dossier
-    top: -2px;
-  }
+  top: 0;
 }
 
 /* === Accessibilité === */
